--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,6 +71,11 @@
 
             <div class="login-container">
                 <h1>Login</h1>
+
+                <div th:if="${error}" class="alert alert-danger">
+                    <p th:text="${error}"></p>
+                </div>
+                
                 <form id="loginForm" th:action="@{/login}" method="POST">
                     <label for="email" class="form-label">Email</label>
                     <input type="email" class="form-control" id="email" name="email" required>
