--- a/src/main/resources/templates/store_locator.html
+++ b/src/main/resources/templates/store_locator.html
@@ -69,9 +69,12 @@
                         <div class="service-box">
                             <h4>Store Locations</h4>
                             <div class="services-list">
-                                <a href="#" class="active"><i class="bi bi-geo-alt"></i><span> Grafton Street</span></a>
-                                <a href="#"><i class="bi bi-geo-alt"></i><span> Wellington Quay</span></a>
-                                <a href="#"><i class="bi bi-geo-alt"></i><span> Sallynoggin</span></a>
+                                <a href="#" class="active" data-index="0"><i class="bi bi-geo-alt"></i><span> Grafton Street</span></a>
+                                <a href="#" data-index="1"><i class="bi bi-geo-alt"></i><span> Wellington Quay</span></a>
+                                <a href="#" data-index="2"><i class="bi bi-geo-alt"></i><span> Sallynoggin</span></a>
+                            </div>
+                            <div id="store-info" class="store-info mt-3">
+                                <!-- Store info will be dynamically added here -->
                             </div>
                         </div>
                     </div>
@@ -106,47 +109,8 @@
         </div>
     </footer>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key="></script>
-    <script>
-        function initMap() {
-            // Initialize the map
-            const map = new google.maps.Map(document.getElementById('map'), {
-                center: { lat: 53.349805, lng: -6.26031 }, // Initial center point (Dublin)
-                zoom: 12, // Initial zoom level
-            });
-
-            // List of locations with coordinates and names
-            const locations = [
-                { name: "Grafton Street", lat: 53.342798, lng: -6.2597 },
-                { name: "Wellington Quay", lat: 53.3452, lng: -6.2662 },
-                { name: "Sallynoggin", lat: 53.2774, lng: -6.1372 },
-            ];
-
-            // Create markers for each location on the map
-            const markers = locations.map((location) => {
-                return new google.maps.Marker({
-                    position: { lat: location.lat, lng: location.lng }, // Coordinates of the location
-                    map: map, // Attach the marker to the map
-                    title: location.name, // Tooltip title for the marker
-                });
-            });
-
-            // Add click events to buttons in the location list
-            const buttons = document.querySelectorAll(".services-list a"); // Select all location buttons
-            buttons.forEach((button, index) => {
-                button.addEventListener("click", (event) => {
-                    event.preventDefault(); // Prevent default link behavior
-                    const location = locations[index]; // Get the corresponding location
-                    map.setCenter({ lat: location.lat, lng: location.lng }); // Center the map on the selected location
-                    map.setZoom(15); // Zoom in to the selected location
-                });
-            });
-        }
-
-        // Load the map when the page finishes loading
-        window.onload = initMap;
-
-    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=${GOOGLE_MAPS_API_KEY}"></script>
+    <script th:src="@{/js/store-locator.js}"></script>
 </body>
 
 </html>
